--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@ https://www.w3schools.com/howto/howto_js_redirect_webpage.asp
 <script>
   location.replace("./hw00/index.html")
 </script>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="./simple/simple.jpg" width="1200px" height="600px"/>
+    </div>
+  </div>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="./medium/medium.jpg" width="1200px" height="600px"/>      
+    </div>
+  </div>
+
 </body>
 </html> 
