--- a/hw02/index.html
+++ b/hw02/index.html
@@ -185,8 +185,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
-    </div>
+這一次的作業二要做的是稿紙製作，流程是專案下載、環境建立、安裝套件、去掉重複字及空格、製作稿紙，其中因為我的名字的字稍微比較特殊一點，沒有包含在原本的稿紙裡面，所以有多加在指定的txt檔案裡面，這樣在稿紙裡面就會出現另外加上去的特殊字。    </div>
   </div>
 
   <!-- ------------------------------------------------>
