--- a/hw02/index.html
+++ b/hw02/index.html
@@ -178,9 +178,20 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/src/ 檔案夾。
+      Simple Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/simple/ 檔案夾。<br>
+      Medium Baseline 的截圖，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/medium/ 檔案夾。<br>
+      Strong Baseline 的壓縮檔，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">02</span>/strong/ 檔案夾。<br>
     </div>
   </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      壓縮檔位置連結：
+      <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw02/strong'" value="按我 ٩(｡・ω・｡)و 前往"> 
+      (p.s 請記得修改網址)
+    </div>
+</div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
