--- a/hw02/index.html
+++ b/hw02/index.html
@@ -238,7 +238,7 @@
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="./medium/medium.png" width="1200px" height="600px"/>      
+      <img src="./medium/medium.png" width="1200px" height=""/>      
     </div>
   </div>
 
