--- a/hw03/index.html
+++ b/hw03/index.html
@@ -168,7 +168,7 @@
 
 <div class="container-fluid">
 
-  <!-- ------------------------------------------------>
+   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <h1>作業 03</h1>
@@ -178,13 +178,27 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">03</span>/src/ 檔案夾。
+      該次作業程式碼，請放在<br>
+      https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">03</span>/<span style="color:red;">Simple</span>。<br>
+      https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">03</span>/<span style="color:red;">Medium</span>。<br>
+      https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">03</span>/<span style="color:red;">Strong</span>。
+   
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+  
+  <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
+      <h1>心得</h1>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
       心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
     </div>
   </div>
@@ -201,19 +215,29 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
+          <td id='m1'>1</td>
+          <td>Simple baseline - 專案下載 </td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td id='m2'>2</td>
+          <td>Simple baseline - 安裝虛擬環境 </td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td id='m3'>3</td>
+          <td>Medium baseline - 旋轉校正手寫稿紙 </td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td id='m4'>2</td>
+          <td>Strong baseline - 成功執行切割程式並取得檔案 </td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked></td>
+          <td id='m5'>2</td>
+          <td>Strong baseline - 繳交頁面新增下載壓縮檔按鈕 </td>
         </tr>
       </table>
     </div>
@@ -222,15 +246,63 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+      <h1>Simple baseline</h1>
+    </div>
+  </div>
+  
+  <!-- ------------------------------------------------>
+
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="./Simple/simple_專案下載.png" width="1200px"/>
     </div>
   </div>
 
+  <div class="row hw12">
+    <div class="col-md-12 twenty">    
+      <img src="./Simple/simple_安裝虛擬環境.png" width="1200px"/>      
+    </div>
+  </div>
+  
+  <!-- ------------------------------------------------>
+  
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <h1>Medium baseline</h1>
+    </div>
+  </div>
+  
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+  <div class="col-md-12 twenty">
+    <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw03/medium'" value="按我 ٩(｡・ω・｡)و 前往">
+    <a href="https://drive.google.com/file/d/1--kv_6w1h3E81J_OmHjOybE_RAntH5W0/view?usp=sharing" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
+    <img src="./Medium/medium_rotated.png" width="1200px"/>      
+    
+  </div>
+</div>
+
+  <!-- ------------------------------------------------>
+  
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <h1>Strong baseline</h1>
+    </div>
+  </div>
+  
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+  <div class="col-md-12 twenty">
+<!--     <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw03/strong'" value="按我 ٩(｡・ω・｡)و 前往">      -->
+    <img src="./Strong/strong_crop.png" width="1200px"/>      
+    
+  </div>
+</div>
+  
   <!-- ------------------------------------------------>
 
   <!-- ------------------------------------------------>
+
 
 
 <script>
