--- a/hw03/index.html
+++ b/hw03/index.html
@@ -275,9 +275,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
   <div class="col-md-12 twenty">
-    <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw03/medium'" value="按我 ٩(｡・ω・｡)و 前往">
     <a href="https://drive.google.com/file/d/1--kv_6w1h3E81J_OmHjOybE_RAntH5W0/view?usp=sharing" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
-    <img src="./Medium/medium_rotated.png" width="1200px"/>      
+    <img src="./medium/medium_rotated.png" width="1200px"/>      
     
   </div>
 </div>
@@ -294,7 +293,7 @@
   <div class="row hw12">
   <div class="col-md-12 twenty">
 <!--     <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw03/strong'" value="按我 ٩(｡・ω・｡)و 前往">      -->
-    <img src="./Strong/strong_crop.png" width="1200px"/>      
+    <img src="./strong/strong_crop.png" width="1200px"/>      
     
   </div>
 </div>
