--- a/hw03/index.html
+++ b/hw03/index.html
@@ -254,13 +254,13 @@
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="./Simple/simple_專案下載.png" width="1200px"/>
+      <img src="./simple/simple_專案下載.png" width="1200px"/>
     </div>
   </div>
 
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      <img src="./Simple/simple_安裝虛擬環境.png" width="1200px"/>      
+      <img src="./simple/simple_安裝虛擬環境.png" width="1200px"/>      
     </div>
   </div>
   
