--- a/hw03/index.html
+++ b/hw03/index.html
@@ -276,7 +276,7 @@
   <div class="row hw12">
   <div class="col-md-12 twenty">
     <a href="https://drive.google.com/file/d/1--kv_6w1h3E81J_OmHjOybE_RAntH5W0/view?usp=sharing" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
-    <img src="./medium/medium_rotated.png" width="1200px"/>      
+    <img src="./medium/medium.png" width="1200px"/>      
     
   </div>
 </div>
@@ -292,8 +292,8 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
   <div class="col-md-12 twenty">
-<!--     <input type="button" name="back" onclick="location.href='https://github.com/yunhsilin/ct2024s/tree/main/hw03/strong'" value="按我 ٩(｡・ω・｡)و 前往">      -->
-    <img src="./strong/strong_crop.png" width="1200px"/>      
+    <a href="https://github.com/yunhsilin/ct2024s/blob/main/hw03/strong/crop_v5.zip" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
+    <img src="./strong/strong.png" width="1200px"/>      
     
   </div>
 </div>
