--- a/hw03/index.html
+++ b/hw03/index.html
@@ -199,7 +199,7 @@
   
   <div class="row hw12">
     <div class="col-md-12 twenty">    
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      這一次的作業三裡面，要做的是稿紙校正以及裁切，步驟流程是專案下載、建立虛擬環境、旋轉校正、裁切。有參考助教在LINE群組上提醒的，如果有裁切到手寫字體要調整s2_crop.py的第36行，我把數值改成330看起來比較合適。
     </div>
   </div>
 
@@ -292,7 +292,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
   <div class="col-md-12 twenty">
-    <a href="https://github.com/yunhsilin/ct2024s/blob/main/hw03/strong/crop_v5.zip" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
+    <a href="https://github.com/yunhsilin/ct2024s/blob/main/hw03/strong" download="strong_109590022_林云媐">strong_109590022_林云媐</a><br>
     <img src="./strong/strong.png" width="1200px"/>      
     
   </div>
