--- a/hw04/index.html
+++ b/hw04/index.html
@@ -199,8 +199,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
-    </div>
+      這一次的作業五要做向量化SVG、打包，流程內容是下載專案以及Node.jsv、安裝套件、PNG轉換成SVG、SVG轉換成SVG去除黑塊、SVG轉換成TTF、安裝應用。其中我在picosvg這部分卡關比較久，但看到最後在FontForge的成果以及可以用在Word上感到很有趣。    </div>
   </div>
 
   <!-- ------------------------------------------------>
