--- a/hw04/index.html
+++ b/hw04/index.html
@@ -305,6 +305,8 @@
   d3.select("#myCheckbox5").on("change",update);
   d3.select("#myCheckbox6").on("change",update);
   d3.select("#myCheckbox7").on("change",update);
+  d3.select("#myCheckbox8").on("change",update);
+  d3.select("#myCheckbox9").on("change",update);
 
   update();
   
@@ -324,6 +326,29 @@
       score += parseInt(d3.select('#m3').html());   
     }
 
+    if (d3.select("#myCheckbox4").property("checked")){
+      score += parseInt(d3.select('#m4').html());   
+    }
+
+    if (d3.select("#myCheckbox5").property("checked")){
+      score += parseInt(d3.select('#m5').html());
+    }
+
+    if (d3.select("#myCheckbox6").property("checked")){
+      score += parseInt(d3.select('#m6').html());   
+    }
+
+    if (d3.select("#myCheckbox7").property("checked")){
+      score += parseInt(d3.select('#m7').html());   
+    }
+
+    if (d3.select("#myCheckbox8").property("checked")){
+      score += parseInt(d3.select('#m8').html());   
+    }
+
+    if (d3.select("#myCheckbox9").property("checked")){
+      score += parseInt(d3.select('#m9').html());   
+    }
     d3.select("#myTotal").html(score);    
   }
 </script>
