--- a/hw00/index.html
+++ b/hw00/index.html
@@ -8,7 +8,7 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- https://alexlenail.me/NN-SVG/about.html -->
-<link rel="icon" href="./favicon.svg"/>
+<link rel="icon" href="./me.jpg"/>
 <style type="text/css">
 
   @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap');
