--- a/hw00/index.html
+++ b/hw00/index.html
@@ -8,7 +8,7 @@
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- https://alexlenail.me/NN-SVG/about.html -->
-<link rel="icon" href="./me.jpg"/>
+<link rel="icon" href="./favicon.svg"/>
 <style type="text/css">
 
   @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap');
@@ -197,7 +197,7 @@
   <!-- ---------------------------------------------- -->
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <img class="withborder" src="./image.svg" height="360">
+      <img class="withborder" src="./me.jpg" height="360">
       <hr>
       請挑選一張你的生活照(檔案名稱取名為 me.jpg)取代上方的 Hello Kitty，作法如下: <br>
       1. 上傳到你的生活照到 hw00 檔案夾 https://github.com/你的帳號/ct2024s/hw00/ <br>
