--- a/hw01/index.html
+++ b/hw01/index.html
@@ -20,17 +20,17 @@
   @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@200&display=swap');
 
   table {
-  border-collapse: collapse;
-  border: 2px solid white; /* rgba(217,140,144,1) */
-  font-size:  12pt;
-  margin-left: auto;
-  margin-right: auto;
+    border-collapse: collapse;
+    border: 2px solid white; /* rgba(217,140,144,1) */
+    font-size:  12pt;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   td,
   th {
-  border: 1px solid white;
-  padding: 2px 8px;
+    border: 1px solid white;
+    padding: 2px 8px;
   }
 
   .flipswitch
@@ -92,6 +92,10 @@
     margin-bottom: 8px;
   }
 
+  .bottomrow {
+    margin-bottom: 32px;
+  }
+
   .twenty {
     border: 1px solid #f9eced;
     color: #f9eced;
@@ -103,6 +107,24 @@
       box-shadow: 0 0 5px 3px #f9eced;
       color: cyan; 
       text-shadow: 0 0 6px #FFFFFF, 0 0 6px #000000;
+  }
+
+  @font-face {
+    font-family:'FiraCode-Regular';
+    src: url(FiraCode-Regular.ttf) format('truetype'); /* https://worldofzero.com/posts/enable-font-ligatures-vscode/ */
+  }
+
+  .FiraCode {
+    font-family: 'FiraCode-Regular';
+  }
+
+  @font-face {
+    font-family:'DiaPro-Regular';
+    src: url(DiaPro-Regular.ttf) format('truetype'); /* https://but.tw/font/ */
+  }
+
+  .DiaPro {
+    font-family: 'DiaPro-Regular';
   }
 
   .github-corner:hover 
@@ -158,7 +180,7 @@
 </head>
 <body>
 <!-- https://alexlenail.me/NN-SVG/about.html -->
-<a href="https://tjhsieh.github.io/c/vis/vis2023f/syllabus/index.html" class="github-corner" aria-label="View source on Github">
+<a href="https://github.com/你的帳號/ct2024s/" class="github-corner" aria-label="View source on Github">
   <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#f9eced; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
     <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="#f9eced" stroke="#6A4C9C" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -166,28 +188,24 @@
   </svg>
 </a>
 
+
 <div class="container-fluid">
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 01</h1>
+      <h1>作業 01 <hr> Ligature 「合字」 「連字」</h1>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+  <!-- 
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">01</span>/src/ 檔案夾。
+      若該次作業有程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/ct2024s/hw<span style="color:red;">01</span>/src/ 檔案夾。
     </div>
   </div>
-
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
-    </div>
-  </div>
+  -->
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
@@ -197,23 +215,37 @@
           <th>總分</th>
           <th>完成後打勾</th>
           <th>配分</th>
+          <th>等級</th>
           <th>分項描述</th>
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td  rowspan="2">Simple baseline</td>
+          <td>下載並安裝 'Fira Code' 字體。</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td id='m2'>2</td>
+          <td>下載並安裝 DiaPro 字體。</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td  rowspan="2">Medium baseline </td>
+          <td>設定 VS Code 使用 'Fira Code' 字體，並開啟連字功能。</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td id='m4'>2</td>
+          <td>設定 VS Code 使用 DiaPro 字體，並開啟連字功能。</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked></td>
+          <td id='m5'>2</td>
+          <td>Strong baseline</td>
+          <td>完成 HW01 作品集，寫100字心得，放到 github 你的 ct2024s 倉庫 hw01 檔案夾。</td>
         </tr>
       </table>
     </div>
@@ -222,16 +254,140 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+      這一次的作業一，要做的部分有安裝Fira Code以及DiaPro的字體，下載完成之後第一次使用的時候，剛開始沒辦法顯示出新安裝的字體，原本以為是我自己settings.json 多了一些屬性才會造成字體無法更新，後來發現只是沒有把整個 vscode重新開啟。
+    </div>
+  </div>
+
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-6 twenty">
+      <h1> 「FiraCode」</h1>
+      <ul>
+       <li>原文出處: <a href="https://worldofzero.com/posts/enable-font-ligatures-vscode/" target="_blank"> Enable Font Ligatures in VS Code </a></li>
+       <li>GitHub: <a href="https://github.com/tonsky/FiraCode" target="_blank">https://github.com/tonsky/FiraCode</a></li>
+      </ul>
+    </div>
+    <div class="col-md-6 twenty">
+      <h1> 「時刻表っぽいフォント — DiaPro」</h1>
+      <ul>
+       <li>原文出處: <a href="https://but.tw/font/" target="_blank"> 時刻表っぽいフォント — DiaPro </a></li>
+       <li>GitHub: <a href="https://github.com/ButTaiwan/diapro/releases" target="_blank">https://github.com/ButTaiwan/diapro/releases</a></li>
+      </ul>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-6 twenty">
+      <li class="">預設字型: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> &nbsp;&nbsp; => &nbsp;&nbsp; == &nbsp;&nbsp; === &nbsp;&nbsp; != &nbsp;&nbsp; =/= &nbsp;&nbsp; <= &nbsp;&nbsp; >= &nbsp;&nbsp; <=></li>
+      <li class="FiraCode">FiraCode 字型: -> => == === != =/= <= >= <=></li>
+    </div>
+    <!-- &nbsp; &ensp; &emsp; &thinsp; &zwnj; &zwj;  -->
+    <div class="col-md-6 twenty">
+      <li class="">預設字型: Sleeper AllReserved GreenReserved LimitedSleeper</li>
+      <li class="DiaPro">DiaPro 字型: Sleeper AllReserved GreenReserved LimitedSleeper</li>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-6 twenty">
+      <li>說明: 如何啟動 VS Code 的連字設定 font ligatures ?</li>
+      <li>1. 下載並安裝 Fira Code。</li>
+      <li>2. File -> Preferences -> Settings -> 'Text Editor' -> 'Font'</li>
+      <li>3. 編輯 <span style="color: yellow;"> settings.json </span> 檔，指定 'Fira Code' 字型，開啟連字設定。</li>
+      <textarea rows="5" cols="50">
+        {
+          "editor.fontFamily": "'Fira Code', 'Courier New'",
+          "editor.fontLigatures": true,
+        }
+      </textarea>
+      <li>4. 關閉 VS Code，重新啟動 VS Code。</li>
+      <li>5. 使用 VS Code 打開 sample.txt。</li>
+      <li>6. 螢幕截圖。</li>
+    </div>
+
+    <div class="col-md-6 twenty">
+      <li>說明: 如何啟動 VS Code 的連字設定 font ligatures ?</li>
+      <li>1. 下載並安裝 DiaPro 字型。</li>
+      <li>2. File -> Preferences -> Settings -> 'Text Editor' -> 'Font'</li>
+      <li>3. 編輯 <span style="color: yellow;"> settings.json </span> 檔，指定 DiaPro 字型，開啟連字設定。</li>
+      <textarea rows="5" cols="50">
+        {
+          "editor.fontFamily": "DiaPro, 'Courier New'",
+          "editor.fontLigatures": true,
+        }
+      </textarea>
+      <li>4. 關閉 VS Code，重新啟動 VS Code。</li>
+      <li>5. 使用 VS Code 打開 sample.txt。</li>
+      <li>6. 螢幕截圖。</li>
+    </div>
+
+  </div>
 
   <!-- ------------------------------------------------>
 
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-6 twenty">
+      <li>成功顯示字型後，使用 VS Code 打開 sample.txt，螢幕截圖(顯示 Fira Code 字型)，命名為 <span style="color: yellow;">1.png</span>，放到作品集 HW01 檔案夾。注意: 副檔名 png 必須小寫。</li>
+      <li>
+        <img src="./1.png" width="99%" alt="1.png 螢幕截圖: 顯示 Fira Code 字型 (如下圖範例)" />
+      </li>
+    </div>
+    <div class="col-md-6 twenty">
+      <li>成功顯示字型後，使用 VS Code 打開 sample.txt，螢幕截圖(顯示 DiaPro 字型)，命名為 <span style="color: yellow;">2.png</span>，放到作品集 HW01 檔案夾。注意: 副檔名 png 必須小寫。</li>
+      <li>
+        <img src="./2.png" width="99%" alt="2.png 螢幕截圖: 顯示 DiaPro 字型 (如下圖範例)" />
+      </li>
+    </div>
+  </div>
+
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-6 twenty">
+      正確顯示 FiraCode 字型
+      <!-- <img src="./1s.png" width="99%" /> -->
+    </div>
+    <div class="col-md-6 twenty">
+      正確顯示 DiaPro 字型
+      <!-- <img src="./2s.png" width="99%" /> -->
+    </div>
+  </div>
+
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12 bottomrow">
+    <div class="col-md-6 twenty">
+      對照組(預設字體，沒有啟動連字)
+      <img src="./0.png" width="99%" />
+    </div>
+    <div class="col-md-6 twenty">
+      對照組(預設字體，沒有啟動連字)
+      <img src="./0.png" width="99%" />
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <!-- 
+  <div class="row hw12 bottomrow">
+    <div class="col-md-6 twenty">
+      
+    </div>
+    <div class="col-md-6 twenty">
+      
+    </div>
+  </div>
+  -->
+
+
+
+  <!-- ------------------------------------------------>
+
+  <!-- ------------------------------------------------>
 
 <script>
   $(function() {
@@ -246,8 +402,6 @@
   d3.select("#myCheckbox3").on("change",update);
   d3.select("#myCheckbox4").on("change",update);
   d3.select("#myCheckbox5").on("change",update);
-  d3.select("#myCheckbox6").on("change",update);
-  d3.select("#myCheckbox7").on("change",update);
 
   update();
   
@@ -266,6 +420,15 @@
     if (d3.select("#myCheckbox3").property("checked")){
       score += parseInt(d3.select('#m3').html());   
     }
+
+    if (d3.select("#myCheckbox4").property("checked")){
+      score += parseInt(d3.select('#m4').html());   
+    }
+
+    if (d3.select("#myCheckbox5").property("checked")){
+      score += parseInt(d3.select('#m5').html());   
+    }
+
 
     d3.select("#myTotal").html(score);    
   }
